[gd_scene load_steps=4 format=3 uid="uid://bb8ou54p0slxk"]

[ext_resource type="Script" uid="uid://stkhjnc0x7i2" path="res://Scripts/eos_login.gd" id="1_ibxkx"]
[ext_resource type="PackedScene" uid="uid://0kgd4s5iyrq5" path="res://Scenes/node_2d.tscn" id="2_2mllj"]
[ext_resource type="Texture2D" uid="uid://cg4bbwdmbivym" path="res://Assets/Better_ratio.png" id="3_4mfap"]

[node name="EOS Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ibxkx")
game_scene = ExtResource("2_2mllj")

[node name="MessageDisplay" type="Label" parent="."]
z_index = 2
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = -229.0
offset_top = 3.0
offset_right = -142.0
offset_bottom = 35.0

[node name="Timer" type="Timer" parent="."]

[node name="Button2" type="Button" parent="."]
z_index = 2
layout_mode = 0
offset_left = 335.0
offset_top = 521.0
offset_right = 431.0
offset_bottom = 575.0
scale = Vector2(2.47261, 2.21553)
text = "Join As 
Car "

[node name="Button3" type="Button" parent="."]
z_index = 2
layout_mode = 0
offset_left = 334.0
offset_top = 670.0
offset_right = 430.0
offset_bottom = 705.0
scale = Vector2(2.47261, 2.21553)
text = "Join As 
(HOST)"

[node name="BetterRatio" type="Sprite2D" parent="."]
position = Vector2(427, 421)
scale = Vector2(2.45773, 2.00475)
texture = ExtResource("3_4mfap")

[connection signal="pressed" from="Button" to="." method="lready"]
[connection signal="pressed" from="Button2" to="." method="search_lobbies"]
[connection signal="pressed" from="Button3" to="." method="findMatch"]
